Type and spacing fixes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,8 +113,8 @@ footer {
 }
 
 .status {
-	font-size: 1.6em;
-	margin: -.6em auto;
+	font-size: 1.4em;
+	margin: -.4em auto;
 }
 
 .open { display: block !important; }
@@ -209,7 +209,7 @@ footer {
 }
 
 .article h2 {
-	font-size: 1.2em;
+	font-size: 1.4em;
 	padding: 30px 30px 0 30px;
 }
 
@@ -218,7 +218,7 @@ footer {
 }
 
 article {
-	width: 700px;
+	width: 720px;
 }
 
 article h1 {
